MDEV-30411: main.explain_json_format_partitions fails on Debian armel and armhf builders

The my_timer_cycles is an impressive collection of cycle based
timers that isn't comprehensive on all architectures.

MDEV-28926 is such that if there isn't an implementation then the output
doesn't include the r_total_time_ms values and therefore test results
change.

As an alternative to my_timer_cycles, my_timer_interval returns a
clock_gettime based implementation. These on Linux for kernel versions
above about 4.0 are VDSO based implementations on arm, arm64, mips,
powerpc, ppc64le,riscv, x86, x86_64 and a few others. As these results
are returning in nanoseconds, the measure of the time interval is
clearer than a static CPU frequency measure at MariaDB startup.